main: Changes in general

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,22 +38,42 @@
     "projectsTitleDesign": "Design",
     "NotFoundtext": "Lost?",
     "NotFoundButton": "Back to home",
+
     "beatsceneTitle": "BeatScene",
     "beatsceneExcerpt": "Product design. App for concert and live music lovers.",
-    "projectObjective": "OBJECTIVE",
-    "beatsceneWhatIs": "What is BeatScene?",
-    "beatsceneWhatIsText": "It is an App where you can share the experience of living your favorite music event with whoever you want or have the possibility of meeting new people with your same musical tastes and living it together.",
+
+    "projectObjective": "Objective and Research",
+    "beatsceneWhatIs": "I want to meet new people and go to concerts with them. How can I do that?",
+    "beatsceneWhatIsText": "This was the question that initiated the research for product development. We decided to use the double diamond methodology, starting with the discovery phase.",
+    "beatsceneWhatIsText2": "Through interviews, surveys, and detailed desk research, we identified the users' main needs: fast event search, frictionless purchasing, and a secure system that builds trust.",
+
     "beatsceneSubtitle": "Mobile UX/UI Project",
     "beatscenePhrase": "I love going to concerts and meeting new people",
-    "beatsceneslide1": "BeatScene BeatScene BeatScene BeatScene BeatScene BeatScene BeatScene BeatScene BeatScene",
-    "beatsceneslide2": "Share your music and enjoy concerts Share your music and enjoy concerts",
-    "projectProcess": "PROCESS",
-    "beatsceneProcessTitle": "Research and design system",
-    "beatsceneProcessText": "The process to design the app started with a complete study and research on the user experience, to then follow the necessary steps to design the interface. Developing a solid design system, with wireframes and a structure focused on the user's interactivity with the app.",
-    "beatsceneResult": "FINAL RESULT",
-    "beatsceneResultText": "The App was entirely designed in Figma, the prototype was tested with the Maze tool and changes were made within the interface according to the feedback from the constant tests and feedback from the possible users.",
+    "beatsceneslide1": "typography fonts typography fonts typography fonts typography fonts typography fonts",
+    "beatsceneslide2": "Satoshi Sans Satoshi Sans Satoshi Sans Satoshi Sans Satoshi Sans",
+
+    "projectProcess": "Process",
+    "beatsceneProcessTitle": "Prioritize and refine the information to empathize with our users.",
+    "beatsceneProcessText": "At this stage, we synthesized the collected information to obtain high-quality, user-focused data. We analyzed their needs and created an empathy map to reflect key insights in a User Persona. With this foundation, we developed a User Journey and conducted a Benchmarking study, identifying solutions aligned with our user archetype.",
+    
+    "beatsceneDesign": "Design",
+    "beatsceneDesignTitle": "Establish a design and prototyping system.",
+    "beatsceneDesignText": "Before moving into design, it was essential to find insights based on the user archetype. We created a usability and feasibility matrix, filtered findings by value, and incorporated them into a Business Model Canvas. This allowed us to define key functionalities such as smart filters, enhanced security, and personalized recommendations.",
+    "beatsceneDesignText2": "We moved forward in the design phase with a product sitemap, which served as a foundation for creating low-fi wireframes. We prepared for the next step with flow maps, as the following phase involved high-fidelity prototyping of key screens, such as account creation and new user login.",
+
+    "beatsceneResult": "Final Result",
+    "beatsceneResultTitle": "Create a functional MVP prototype and test the user flows.",
+    "beatsceneResultText": "Before finalizing, we designed a high-fidelity prototype, based on the previously established design system. We conducted user testing to iterate and apply necessary improvements to the prototype.",
+    "beatsceneResultText2": "The final outcome was validated when the usability and accessibility-focused user tests delivered positive quantitative and qualitative results. Finally, the MVP was presented to the development team.",
+
+    "beatsceneConclusion": "Conclusion",
+    "beatsceneConclusionTitle": "Learning and reflection",
+    "beatsceneConclusionText": "I greatly enjoyed working with multidisciplinary teams, with people who didn't necessarily share the same vision and required persuasion with new ideas. These exchanges were always collaborative, making learning a constant process. It was also gratifying to see how the client gradually recognized that the screens were meeting their expectations in terms of UX and UI. Review the complete project presentation.",
+
+    "goToTop" : "Go to top",
     "infoContact": "Contact me",
     "infoContactText": "If you feel we can work together, let's talk.",
+
     "specialTitle": "The Special One",
     "specialText": "Design and Development of Web Magazine about Football and current affairs.",
     "projectVisit": "Visit the website",
@@ -65,7 +85,8 @@
     "specialTools": "Tools",
     "specialslide1": "The Special One The Special One The Special One The Special One The Special One",
     "specialslide2": "We are Haters. Zero Hypocrisy. We are Haters. Zero Hypocrisy. We are Haters. Zero Hypocrisy.",
-    "specialResultTitle": "The web",
+    "projectResult": "Results",
+    "specialResultTitle": "A modern and functional website designed for content focused on web traffic.",
     "specialResultText": "The modern design and the functionality of the CMS allow the web to be manageable by EDITORS or CONTENT CREATORS. The idea of the project is to get web traffic and in the future use it to add MEDIA ADS, for this, an SEO strategy has been applied to the web that allows it to be optimized in the face of current search engines.",
     "ulimaTitle": "Universidad de Lima",
     "ulimaText": "Graphic Designer. Creation of digital and printed pieces, audiovisual production and web interface design for the Postgraduate Commercial area.",
